--- a/source/index.html
+++ b/source/index.html
@@ -1,17 +1,299 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Название проекта</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="preload" href="#" type="font/woff2" as="font">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/index.js" defer></script>
-  </head>
-  <body class="page__body">
-    <header class="header">Шапка</header>
-    <main>
-      <h1>Страница для старта</h1>
-    </main>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Название проекта</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="preload" href="fonts/Barlow-Regular.woff2" type="font/woff2" as="font" crossorigin>
+  <link rel="preload" href="fonts/Barlow-Medium.woff2" type="font/woff2" as="font" crossorigin>
+  <link rel="preload" href="fonts/Barlow-SemiBold.woff2" type="font/woff2" as="font" crossorigin>
+  <link rel="stylesheet" href="styles/styles.css">
+  <script src="scripts/index.js" defer></script>
+</head>
+
+<body class="page__body">
+  <header class="header">
+    <nav class="page-navigation">
+      <a href="/">
+        <img src="./images/Logo.svg" alt="Логотип" class="page-navigation__logo">
+      </a>
+      <ul class="page-navigation__list">
+        <li class="page-navigation__item"><a href="#" class="page-navigation__link">Home</a></li>
+        <li class="page-navigation__item"><a href="#" class="page-navigation__link">Services</a></li>
+        <li class="page-navigation__item"><a href="#" class="page-navigation__link">Work</a></li>
+        <li class="page-navigation__item"><a href="#" class="page-navigation__link">Process</a></li>
+        <li class="page-navigation__item"><a href="#" class="page-navigation__link">About</a></li>
+        <li class="page-navigation__item"><a href="#" class="page-navigation__link">Careers</a></li>
+      </ul>
+      <a href="#" class="button poison-button-header">Contact Us</a>
+    </nav>
+  </header>
+  <main>
+    <section class="hero section-margin bg-pattern">
+      <div class="hero__wrapper">
+        <h1 class="hero__title">A Digital Product Studio <br>that will Work</h1>
+        <div class="hero__description">For
+          <span class="hero__tag">Startups</span>
+          ,
+          <span class="hero__tag">Enterprise leaders</span>
+          ,
+          <span class="hero__tag">Media & Publishers</span>
+          and
+          <span class="hero__tag">Social Good</span>
+        </div>
+        <div class="button__wrapper">
+          <a href="#" class="button dark-button">Our Works</a>
+          <a href="#" class="button poison-button">Contact Us</a>
+        </div>
+      </div>
+
+    </section>
+    <section class="partners section-margin">
+      <div class="partners__wrapper">
+        <h2 class="visually-hidden">Partners</h2>
+        <span class="partners__description">Trusted By 250+ Companies</span>
+        <ul class="partners__list">
+          <li class="partners__item"><img src="./icons/Logo/Adobe.svg" alt="Adobe" class="partners__image"></li>
+          <li class="partners__item"><img src="icons/Amazon.svg" alt="Amazon" class="partners__image"></li>
+          <li class="partners__item"><img src="./icons/Slack.svg" alt="Slack" class="partners__image"></li>
+          <li class="partners__item"><img src="./icons/Spotify.svg" alt="Spotify" class="partners__image"></li>
+          <li class="partners__item"><img src="./icons/Zoom.svg" alt="Zoom" class="partners__image"></li>
+          <li class="partners__item"><img src="./icons/zaiper.svg" alt="Zapier" class="partners__image"></li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="services section-margin">
+      <div class="services__wrapper">
+        <div class="services-header__wrapper bg-pattern">
+          <h2 class="section__title">Our Services</h2>
+          <p class="text">Transform your brand with our innovative digital solutions that captivate and engage your
+            audience.</p>
+        </div>
+        <ul class="services__list">
+          <li class="services__item">
+            <span class="icon-wrapper">
+              <img src="./icons/service/paint.svg">
+            </span>
+            <div class="services-text__wrapper">
+              <h3 class="services__title">Design</h3>
+              <p class="text services-text">At Squareup, our design team is passionate about creating stunning,
+                user-centric designs that captivate your audience and elevate your brand. We believe that great design
+                is not just about aesthetics; it's about creating seamless and intuitive user experiences.</p>
+            </div>
+            <a href="#" class="button gray-button ">Learn More</a>
+          </li>
+          <li class="services__item">
+            <span class="icon-wrapper">
+              <img src="./icons/service/puzzle.svg">
+            </span>
+            <div class="services-text__wrapper">
+              <h3 class="services__title">Engineering</h3>
+              <p class="text services-text">Our engineering team combines technical expertise with a passion for
+                innovation to build robust and scalable digital solutions. We leverage the latest technologies and best
+                practices to deliver high-performance applications tailored to your specific needs.</p>
+            </div>
+            <a href="#" class="button gray-button ">Learn More</a>
+          </li>
+          <li class="services__item">
+            <span class="icon-wrapper">
+              <img src="./icons/service/block.svg">
+            </span>
+            <div class="services-text__wrapper">
+              <h3 class="services__title">Project Management</h3>
+              <p class="text services-text">Our experienced project management team ensures that your projects are
+                delivered on time, within budget, and according to your specifications. We follow industry-standard
+                methodologies and employ effective communication and collaboration tools to keep you informed throughout
+                the development process.</p>
+            </div>
+            <a href="#" class="button gray-button ">Learn More</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="advantages section-margin">
+      <div class="advantages__wrapper">
+        <div class="services-header__wrapper bg-pattern">
+          <h2 class="section__title">Why Choose SquareUp?</h2>
+          <p class="text">Experience excellence in digital craftsmanship with our team of skilled professionals
+            dedicated to delivering exceptional results.</p>
+        </div>
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <div class="advantages-text__wrapper">
+              <span class="icon-wrapper">
+                <img src="./icons/advantages/Medal.svg">
+              </span>
+              <h3 class="advantages__title">Expertise</h3>
+            </div>
+            <p class="text advantages-text">Our team consists of highly skilled professionals who have a deep
+              understanding of the digital landscape. We stay updated with the latest industry trends and best practices
+              to deliver cutting-edge solutions.</p>
+          </li>
+          <li class="advantages__item">
+            <div class="advantages-text__wrapper">
+              <span class="icon-wrapper">
+                <img src="./icons/advantages/Client.svg">
+              </span>
+              <h3 class="advantages__title">Client-Centric Approach</h3>
+            </div>
+            <p class="text advantages-text">We prioritize our clients and their unique needs. We listen to your ideas,
+              challenges, and goals, and tailor our services to meet your specific requirements. Your success is our
+              success.</p>
+          </li>
+          <li class="advantages__item">
+            <div class="advantages-text__wrapper">
+              <span class="icon-wrapper">
+                <img src="./icons/advantages/Guard.svg">
+              </span>
+              <h3 class="advantages__title">Results-Driven Solutions</h3>
+            </div>
+            <p class="text advantages-text">Our primary focus is on delivering results. We combine creativity and
+              technical expertise to create digital products that drive business growth, enhance user experiences, and
+              provide a competitive advantage.</p>
+          </li>
+          <li class="advantages__item">
+            <div class="advantages-text__wrapper">
+              <span class="icon-wrapper">
+                <img src="./icons/advantages/Corona.svg">
+              </span>
+              <h3 class="advantages__title">Collaborative Partnership</h3>
+            </div>
+            <p class="text advantages-text">We value long-term relationships with our clients. We see ourselves as your
+              digital partner, providing ongoing support, maintenance, and updates to ensure your digital products
+              continue to thrive.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="reviews section-margin">
+      <div class="reviews__wrapper">
+        <div class="services-header__wrapper bg-pattern">
+          <h2 class="section__title">What our Clients say About us</h2>
+          <p class="text">At SquareUp, we take pride in delivering exceptional digital products and services that drive
+            success for our clients. Here's what<br> some of our satisfied clients have to say about their experience
+            working with us</p>
+        </div>
+        <ul class="reviews__list">
+          <li class="reviews__item">
+            <div class="reviews-text__wrapper">
+              <h3 class="reviews__title">SquareUp has been Instrumental in Transforming our Online Presence. </h3>
+              <p class="text reviews-text">Their team's expertise in web development and design resulted in a visually
+                stunning and user-friendly e-commerce platform. Our online sales have skyrocketed, and we couldn't be
+                happier.</p>
+            </div>
+            <div class="reviews__author hero__description">
+              <span class="reviews__image-wrapper">
+                <img src="./images/Person/John-Smith.jpg" alt="Author Image" class="reviews__author-image">
+              </span>
+              <div class="reviews__author-info">
+                <h4 class="reviews__author-name">John Smith</h4>
+                <p class="text reviews-text">CEO of Chic Boutique</p>
+              </div>
+              <a href="#" class="button gray-button ">Open Website</a>
+            </div>
+          </li>
+          <li class="reviews__item">
+            <div class="reviews-text__wrapper">
+              <h3 class="reviews__title">Working with SquareUp was a breeze.</h3>
+              <p class="text reviews-text">They understood our vision for a mobile app that streamlined our food
+                delivery service. The app they delivered exceeded our expectations, and our customers love the seamless
+                ordering experience. SquareUp is a trusted partner we highly recommend.</p>
+            </div>
+            <div class="reviews__author hero__description">
+              <span class="reviews__image-wrapper">
+                <img src="./images/Person/Sarah-Johnson.jpg" alt="Author Image" class="reviews__author-image">
+              </span>
+              <div class="reviews__author-info">
+                <h4 class="reviews__author-name">Sarah Johnson</h4>
+                <p class="text reviews-text">Founder of HungryBites.</p>
+              </div>
+              <a href="#" class="button gray-button ">Open Website</a>
+            </div>
+          </li>
+          <li class="reviews__item">
+            <div class="reviews-text__wrapper">
+              <h3 class="reviews__title">SquareUp developed a comprehensive booking and reservation system for our event
+                management company</h3>
+              <p class="text reviews-text">Their attention to detail and commitment to delivering a user-friendly
+                platform was evident throughout the project. The system has streamlined our operations and enhanced our
+                clients' event experiences.</p>
+            </div>
+            <div class="reviews__author hero__description">
+              <span class="reviews__image-wrapper">
+                <img src="./images/Person/Mark-Thompson.jpg" alt="Author Image" class="reviews__author-image">
+              </span>
+              <div class="reviews__author-info">
+                <h4 class="reviews__author-name">Mark Thompson</h4>
+                <p class="text reviews-text">CEO of EventMasters</p>
+              </div>
+              <a href="#" class="button gray-button ">Open Website</a>
+            </div>
+          </li>
+          <li class="reviews__item">
+            <div class="reviews-text__wrapper">
+              <h3 class="reviews__title">ProTech Solutions turned to SquareUp to automate our workflow</h3>
+              <p class="text reviews-text">They delivered an exceptional custom software solution. The system has
+                significantly increased our productivity and reduced manual errors. SquareUp's expertise and
+                professionalism have made them a trusted technology partner.</p>
+            </div>
+            <div class="reviews__author hero__description">
+              <span class="reviews__image-wrapper">
+                <img src="./images/Person/Laura-Adams.jpg" alt="Author Image" class="reviews__author-image">
+              </span>
+              <div class="reviews__author-info">
+                <h4 class="reviews__author-name">Laura Adams</h4>
+                <p class="text reviews-text">COO of ProTech Solutions.</p>
+              </div>
+              <a href="#" class="button gray-button ">Open Website</a>
+            </div>
+          </li>
+          <li class="reviews__item">
+            <div class="reviews-text__wrapper">
+              <h3 class="reviews__title">SquareUp designed and developed a captivating web portal for showcasing our
+                real estate listings.</h3>
+              <p class="text reviews-text">The platform is visually appealing and easy to navigate, allowing potential
+                buyers to find their dream homes effortlessly. SquareUp's expertise in the real estate industry is
+                unmatched.</p>
+            </div>
+            <div class="reviews__author hero__description">
+              <span class="reviews__image-wrapper">
+                <img src="./images/Person/Michael-Anderson.jpg" alt="Author Image" class="reviews__author-image">
+              </span>
+              <div class="reviews__author-info">
+                <h4 class="reviews__author-name">Michael Anderson</h4>
+                <p class="text reviews-text">Founder of Dream Homes Realty.</p>
+              </div>
+              <a href="#" class="button gray-button ">Open Website</a>
+            </div>
+          </li>
+          <li class="reviews__item">
+            <div class="reviews-text__wrapper">
+              <h3 class="reviews__title">FitLife Tracker wanted a mobile app that tracked fitness activities and
+                provided personalized workout plans.</h3>
+              <p class="text reviews-text">SquareUp's team developed an intuitive and feature-rich app that has helped
+                our users stay motivated and achieve their fitness goals. We highly recommend SquareUp for any health
+                and fitness app development needs.</p>
+            </div>
+            <div class="reviews__author hero__description">
+              <span class="reviews__image-wrapper">
+                <img src="./images/Person/Emily-Turner.jpg" alt="Author Image" class="reviews__author-image">
+              </span>
+              <div class="reviews__author-info">
+                <h4 class="reviews__author-name">Emily Turner</h4>
+                <p class="text reviews-text">CEO of FitLife Tracker</p>
+              </div>
+              <a href="#" class="button gray-button ">Open Website</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+  </main>
+</body>
+
 </html>
